<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    android:orientation="vertical"
    android:id="@+id/mainLayout"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/splashText"
        android:layout_width="512dp"
        android:layout_height="70dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/caprica"
        android:text="@string/splashText"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/splashText2"
        android:layout_width="316dp"
        android:layout_height="35dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/splashText2"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/menuBtn3"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="277dp"
        android:layout_height="64dp"
        android:layout_marginBottom="164dp"
        android:background="@drawable/option_buttons"
        android:fontFamily="@font/caprica"
        android:text="@string/menuBtn3"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/splashText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/menuBtn1"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="277dp"
        android:layout_height="64dp"
        android:layout_margin="15dp"
        android:background="@drawable/option_buttons"
        android:fontFamily="@font/caprica"
        android:text="@string/menuBtn1"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/menuBtn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/menuBtn2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="277dp"
        android:layout_height="64dp"
        android:layout_margin="15dp"
        android:background="@drawable/option_buttons"
        android:fontFamily="@font/caprica"
        android:text="@string/menuBtn2"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/menuBtn3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/menuTextView"
        android:layout_width="421dp"
        android:layout_height="50dp"
        android:background="@drawable/gradient_list"
        android:fontFamily="@font/caprica"
        android:text="@string/menuTextView"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/menuBtn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashText"
        app:layout_constraintVertical_bias="0.527" />


</androidx.constraintlayout.widget.ConstraintLayout>
